added Parallel Java update from March 15, 2011 (assigned it to v. 1.4)

--- a/edu/rit/pj/pj/README
+++ b/edu/rit/pj/pj/README
@@ -3,3 +3,5 @@ v. 1.0 is from 2009
 v. 1.1 is from February 18, 2010
 v. 1.2 is from April 22, 2010
 v. 1.3 is from October 22, 2010
+v. 1.4 is from March 15, 2011
+
