--- a/java3d/README
+++ b/java3d/README
@@ -1,6 +1,6 @@
 
+JDK 1.7.0_45 has now been released; and JOGL/Java3D regressions on Mac OS X are finally fixed.
 Java3D 1.6.1 files are from http://jogamp.org/deployment/java3d/1.6.0-pre8
-They depend on JOGL 2.0.2
+They depend on JOGL v. 2.1.1.
 
-JDK 1.7.0_40 has now been released; and Java3D regressions on Mac OS X will (hopefully) soon be fixed.
 
