--- a/java3d/README
+++ b/java3d/README
@@ -1,6 +1,10 @@
 
 JDK 1.7.0_45 has now been released; and JOGL/Java3D regressions on Mac OS X are finally fixed.
+
 Java3D 1.6.1 files are from http://jogamp.org/deployment/java3d/1.6.0-pre9
 They depend on JOGL v. 2.1.4.
+
+Java3D 1.6.2 files are from http://jogamp.org/deployment/java3d/1.6.0-pre11
+They depend on JOGL v. 2.2.0.
 
 
