added Java3D version 1.6.4

--- a/java3d/README
+++ b/java3d/README
@@ -7,4 +7,5 @@ They depend on JOGL v. 2.1.4.
 Java3D 1.6.2 files are from http://jogamp.org/deployment/java3d/1.6.0-pre11
 They depend on JOGL v. 2.2.0.
 
-
+Java3D 1.6.4 files are from http://jogamp.org/deployment/java3d/1.6.0-pre12
+They depend on JOGL v. 2.3.1.
